--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 
 <head>
@@ -12,8 +12,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
     <title>Hodl's Item List</title>
     <script type="text/javascript">
-        const itemListURL = "https://raw.githubusercontent.com/twitchtoolkit/item-list/master/StoreItems.json";
-        const eventListURL = "https://raw.githubusercontent.com/twitchtoolkit/item-list/master/StoreEvents.json";
+        const itemListURL = "https://raw.githubusercontent.com/Othuv/Othuv.github.io/main/StoreItems.json";
+        const eventListURL = "https://raw.githubusercontent.com/Othuv/Othuv.github.io/main/StoreEvents.json";
     </script>
 </head>
 
@@ -37,7 +37,7 @@
     <main role="main">
         <div class="jumbotron">
             <div class="container">
-                <h1 class="display-3">TwitchToolkit</h1>
+                <h1 class="display-3">RexSucks</h1>
                 <p>TwitchToolkit is a mod written by Twitch.tv/hodlhodl that integrates storytelling decisions into chat votes, awards viewers coins for watching, and those coins can be spent on items/events in game.</p>
                 <ul class="list-group">
                     <li class="list-group-item">!bal - check balance and karma rate</li>
