--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
     <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-    <title>Rexofshadows TwitchToolkit</title>
+    <title>Nolen TwitchToolkit</title>
     <style>
     td.details-control {
     background: url('./details_open.png') no-repeat center center;
@@ -29,7 +29,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Rexofshadows</a>
+        <a class="navbar-brand" href="#">OthuvNolen</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -48,8 +48,6 @@
         <div class="row">
           <div class="container">
               <h1 class="display-3">TwitchToolkit</h1>
-              <h6 class="display-7">If no data in tables please wait for it to load, freezes are not uncommon</h6>
-              <h6 class="display-7">Also if you get a popup error when opening the list shout about commas in rex's chat till he messages nolen</h6>
               <p>TwitchToolkit is a mod written by Twitch.tv/hodlhodl that integrates storytelling decisions into chat votes, awards viewers coins for watching, and those coins can be spent on items/events in game.</p>
               <button type="button" class="btn btn-secondary" data-toggle="collapse" data-target="#demo">Common Commands</button>
               <div id="demo" class="collapse">
@@ -85,9 +83,6 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" data-toggle="tab" href="#trait">Traits</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" data-toggle="tab" href="#nolen">Nolen</a>
                 </li>
               </ul>
 
@@ -208,14 +203,6 @@
                     <tbody>
                     </tbody>
                   </table>
-                </div>
-
-                <!-- Nolen Tab -->
-                <div id="nolen" class="container tab-pane fade bg-light"><br>
-                  <p>How the code monkey who put this together from scratch feels</p>
-                  <div class="tenor-gif-embed" data-postid="5064454" data-share-method="host" data-width="100%" data-aspect-ratio="1.4150943396226414"><a href="https://tenor.com/view/bloody-keyboard-typing-frustration-computer-gif-5064454">Bloody Keyboard GIF</a> from <a href="https://tenor.com/search/bloody-gifs">Bloody GIFs</a></div><script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-                  <p>And what did rex give me? A gif...</p>
-                  <div class="tenor-gif-embed" data-postid="14207322" data-share-method="host" data-width="100%" data-aspect-ratio="1.7785714285714287"><a href="https://tenor.com/view/chocolate-chip-cookies-bake-goods-dessert-sweet-baking-gif-14207322">Chocolate Chip Cookies Bake Goods GIF</a> from <a href="https://tenor.com/search/chocolatechipcookies-gifs">Chocolatechipcookies GIFs</a></div><script type="text/javascript" async src="https://tenor.com/embed.js"></script>
                 </div>
               </div>
           </div>
