--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                 <li class="nav-item">
                   <a class="nav-link" data-toggle="tab" href="#trait">Traits</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" data-toggle="tab" href="#mod">Mods</a>
+                </li>
               </ul>
 
               <!-- Tab panes -->
@@ -204,6 +207,28 @@
                     </tbody>
                   </table>
                 </div>
+
+                <!-- mods Tab -->
+                <div id="mod" class="container tab-pane fade bg-light"><br>
+                  <div class="input-group input-group-sm mb-3">
+                      <div class="input-group-prepend">
+                          <span class="input-group-text" id="inputGroup-sizing-sm">Search</span>
+                      </div>
+                      <input type="text" class="form-control search Mods" aria-label="Search" aria-describedby="inputGroup-sizing-sm">
+                  </div>
+                  <p>Search by name and author row expansion contains version and steam link where possible</p>
+                  <table id="mDT" class="table" style="width:100%">
+                    <thead class="thead-light" >
+                      <tr>
+                        <th>Name</th>
+                        <th>Author</th>
+                        <th></th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                  </table>
+                </div>
               </div>
           </div>
         </div>
@@ -216,6 +241,21 @@
 
         $('.nav-tabs a').on('shown.bs.tab', function(event){
           tab = $(event.target).text();         // active tab
+          if (tab == "Items") {
+            itemDtable.draw();
+          }
+          else if (tab == "Events") {
+            eventDtable.draw();
+          }
+          else if (tab == "Races") {
+            raceDtable.draw();
+          }
+          else if (tab == "Traits") {
+            traitDtable.draw();
+          }
+          else if (tab == "Mods") {
+            modDtable.draw();
+          }
         });
 
         var itemDtable = $('#iDT').DataTable({
@@ -287,6 +327,26 @@
           "dom": 'lrtip'
         });
 
+        var modDtable = $('#mDT').DataTable({
+          "ordering": false,
+          "ajax": {
+            "url": 'https://raw.githubusercontent.com/Othuv/Othuv.github.io/master/modlist.json',
+            "dataSrc": ""
+          },
+          "columns": [
+            {"data": "name"},
+            {"data": "author"},
+            {
+                "className":      'details-control Mods',
+                "orderable":      false,
+                "searchable":     false,
+                "data":           null,
+                "defaultContent": ''
+          }],
+          "pageLength": 50,
+          "dom": 'lrtip'
+        });
+
 
         function format(d){
          // `d` is the original data object for the row
@@ -340,6 +400,30 @@
          '</table>';
         }
 
+        function formatM(d){
+          if(d.steamId != undefined)
+          {
+            return '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">' +
+                '<tr>' +
+                    '<td>Workshop:</td>' +
+                    '<td>' + '<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=' + d.steamId + '">Steam Workshop</a>' + '</td>' +
+                '</tr>' +
+                '<tr>' +
+                    '<td>Version:</td>' +
+                    '<td>' + d.version + '</td>' +
+                '</tr>' +
+            '</table>';
+          } else {
+            return '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">' +
+                '<tr>' +
+                    '<td>Version:</td>' +
+                    '<td>' + d.version + '</td>' +
+                '</tr>' +
+            '</table>';
+          }
+
+        }
+
         $('#rDT tbody').on('click', 'td.details-control.Races', function () {
             var tr = $(this).closest('tr');
             var row = raceDtable.row( tr );
@@ -372,6 +456,22 @@
           }
         });
 
+        $('#mDT tbody').on('click', 'td.details-control.Mods', function () {
+            var tr = $(this).closest('tr');
+            var row = modDtable.row( tr );
+
+            if ( row.child.isShown() ) {
+                // This row is already open - close it
+                row.child.hide();
+                tr.removeClass('shown');
+            }
+            else {
+                // Open this row
+                row.child( formatM(row.data()) ).show();
+                tr.addClass('shown');
+          }
+        });
+
         $(".search, .min, .max").keyup(function() {
             if (tab == "Items") {
               itemDtable.draw();
@@ -384,6 +484,9 @@
             }
             else if (tab == "Traits") {
               traitDtable.draw();
+            }
+            else if (tab == "Mods") {
+              modDtable.draw();
             }
         });
 
@@ -407,11 +510,22 @@
 
             if(price <= 0)
             {
-              return false;
+              if(tab != "Mods")
+              {
+                return false;
+              }
+              else {pAllow = true;}
             }
 
-
-            if(value !== "" && tab != "Traits"){
+            if (value !== "" && tab == "Mods") {
+              if (name.indexOf( value ) !== -1) {
+                tAllow = true;
+              } else if (data[1].toLowerCase().indexOf( value ) !== -1) {
+                tAllow = true;
+              } else {
+                tAllow = false;
+              }
+            } else if(value !== "" && tab != "Traits"){
               if (name.indexOf( value ) !== -1) {
                 tAllow = true;
               } else if (category.indexOf( value ) !== -1) {
